# transcribe-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: realtime-pane-architecture.md
electron/: jest.config.js  main.js  package-lock.json  package.json  pane-manager.js  pane-templates.js  preload.js  session-utils.js
electron/__tests__/: pane-manager.test.js  renderer-utils.test.js  session-utils.test.js
electron/renderer/: index.html  renderer.js  utils.js
examples/: transcribe.rs
python_tests/: test_samples_metadata.py
src/: audio.rs  lib.rs  parakeet.rs  parakeet_engine.rs  realtime.rs  whisper.rs
src/engines/: mod.rs  whisper.rs
src/engines/parakeet/: engine.rs  mod.rs  model.rs  timestamps.rs
tests/: audio.rs  realtime_session.rs
