[package]
name = "transcribe-rs"
version = "0.1.0"
edition = "2021"
description = "A simple library to help you transcribe audio"
license = "MIT"
repository = "https://github.com/cjpais/transcribe-rs"

[features]
default = ["whisper", "parakeet"]
whisper = []
parakeet = ["ort"]

[dependencies]
hound = "3.5.1"
log = "0.4.28"
ndarray = "0.16.1"
ort = { version = "2.0.0-rc.10", optional = true }
whisper-rs = "0.13.2"
env_logger = "0.10.0"
regex = "1.11.2"
thiserror = "2.0.16"
once_cell = "1.21.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["vulkan"] }

